--- a/Page 1/pagecss.css
+++ b/Page 1/pagecss.css
@@ -153,7 +153,11 @@ img{
     margin: 10px;
 }
 
+#fond{
+    width: 400px;  
+    height: 400px;  
 
+}
 
 .beta {
     display: flex;
@@ -187,13 +191,7 @@ img{
     margin: 10px;
 }
 
-.D2 {
-    margin: 10px;
-}
 
-.D3 {
-    margin: 10px;
-}
 
 .Delta {
     display: flex;
@@ -227,13 +225,7 @@ img{
     margin: 10px;
 }
 
-.E2 {
-    margin: 10px;
-}
 
-.E3 {
-    margin: 10px;
-}
 
 footer {
     height: 100px;
