--- a/Page 1/pagecss.css
+++ b/Page 1/pagecss.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     box-sizing: border-box;
-    background-color:black;
+    background-color: black;
+    animation: fadeIn;
+    animation-duration: 9s;
 
 }
 
@@ -36,38 +38,40 @@ h4 {
     margin-top: 40px;
 }
 
-a{
+a {
     color: red;
 }
 
 .menu {
     display: flex;
-    padding:0;                  
+    padding: 0;
     background-color: darkgray;
     justify-content: center;
 }
+
 .menu li {
-    list-style-type: none ;       
+    list-style-type: none;
 }
+
 .menu a {
-    display:block;                
-    min-width: 120px; 
-    margin: 0.5rem;               
-    padding: 0.4rem 0;            
-    text-align: center;           
-    background-color: #1ABC9C;   
-    color: #fff;                  
-    text-decoration: none;      
-    border: 1px solid #fff;       
-    border-radius: 4px;   
-    transition: all 1s ;          
+    display: block;
+    min-width: 120px;
+    margin: 0.5rem;
+    padding: 0.4rem 0;
+    text-align: center;
+    background-color: #1ABC9C;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    transition: all 1s;
 }
 
 .menu a:hover {
-    background-color:darkblue;
+    background-color: darkblue;
     color: #ffe843;
     border-color: #ffe843;
-  }
+}
 
 
 
@@ -139,11 +143,6 @@ a{
     border-style: solid;
 }
 
-img{
-    height: 300px;
-    width: 300px;
-
-}
 
 .C1 {
     margin: 10px;
@@ -153,11 +152,17 @@ img{
     margin: 10px;
 }
 
-#fond{
-    width: 400px;  
-    height: 400px;  
-
+#fond {
+    margin-top: 80px;
+    width: 300px;
+    height: 400px;
 }
+
+#photo3 {
+    width: 300px;
+    height: 400px;
+}
+
 
 .beta {
     display: flex;
@@ -233,18 +238,12 @@ footer {
     text-align: center;
 }
 
-bdi{
-animation: fadeIn;
-animation-duration: 8s;
-
-}
-
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-  }
+    0% {
+        opacity: 0;
+    }
 
-
-
-
-
+    100% {
+        opacity: 1;
+    }
+}
