--- a/Page 2/pagecss.css
+++ b/Page 2/pagecss.css
@@ -26,7 +26,7 @@ h1 {
 .menu {
     display: flex;
     padding: 0;
-    background-color: transparent;
+    background-color:transparent;
     justify-content: center;
 }
 
@@ -40,7 +40,7 @@ h1 {
     margin: 0.5rem;
     padding: 0.4rem 0;
     text-align: center;
-    background-color: darkcyan;
+    background-color: #1ABC9C;
     color: #fff;
     text-decoration: none;
     border: 1px solid #fff;
@@ -49,10 +49,64 @@ h1 {
 }
 
 .menu a:hover {
-    background-color: blue;
+    background-color: darkblue;
     color: #ffe843;
     border-color: #ffe843;
 }
+
+.dropbtn {
+    display: block;
+    min-width: 120px;
+    margin: 0.5rem;
+    padding: 0.4rem 0;
+    text-align: center;
+    background-color: #1ABC9C;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    transition: all 1s;
+    cursor: pointer;
+  }
+  
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+ 
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+
+  .dropdown:hover .dropbtn {
+    background-color: darkblue;
+  }
+
+
 
 .b{
     display: flex;
