--- a/Page 2/pagecss.css
+++ b/Page 2/pagecss.css
@@ -55,18 +55,9 @@ h1 {
 }
 
 .dropbtn {
-    display: block;
-    min-width: 120px;
-    margin: 0.5rem;
-    padding: 0.4rem 0;
-    text-align: center;
-    background-color: #1ABC9C;
-    color: #fff;
-    text-decoration: none;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    transition: all 1s;
+    border: none;
     cursor: pointer;
+    background-color: transparent;
   }
   
 
@@ -102,7 +93,7 @@ h1 {
   }
   
 
-  .dropdown:hover .dropbtn {
+  .dropdown:hover .dropbtn a{
     background-color: darkblue;
   }
 
