--- a/Page 2/CSS/pagecss.css
+++ b/Page 2/CSS/pagecss.css
@@ -3,17 +3,18 @@ body {
     box-sizing: border-box;
 
 }
-#fond{
-    height : 100vh;
-    width : 100vw;
-    position : fixed;
-    top:0px;
-    left : 0px;
+
+#fond {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0px;
+    left: 0px;
     z-index: -10;
 }
 
-#main{
-    height : 100vh;
+#main {
+    height: 100vh;
 }
 
 h1 {
@@ -26,7 +27,7 @@ h1 {
 .menu {
     display: flex;
     padding: 0;
-    background-color:transparent;
+    background-color: transparent;
     justify-content: center;
 }
 
@@ -41,7 +42,7 @@ h1 {
     padding: 0.4rem 0;
     text-align: center;
     background-color: #1ABC9C;
-    color: #fff;
+    color: black;
     text-decoration: none;
     border: 1px solid #fff;
     border-radius: 4px;
@@ -58,48 +59,50 @@ h1 {
     border: none;
     cursor: pointer;
     background-color: transparent;
-  }
-  
+}
 
-  .dropdown {
+
+.dropdown {
     position: relative;
     display: inline-block;
-  }
-  
+}
 
-  .dropdown-content {
+
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: white;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px black;
     z-index: 1;
-  }
-  
+}
 
-  .dropdown-content a {
+
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
+}
 
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
- 
-  .dropdown:hover .dropdown-content {
+
+.dropdown-content a:hover {
+    background-color: darkblue
+}
+
+
+.dropdown:hover .dropdown-content {
     display: block;
-  }
-  
+}
 
-  .dropdown:hover .dropbtn a{
+
+.dropdown:hover .dropbtn a {
     background-color: darkblue;
-  }
+}
 
 
 
-.b{
+.b {
     display: flex;
     flex-direction: column;
     justify-content: left;
@@ -110,12 +113,12 @@ h1 {
     color: black;
 }
 
-.c{
+.c {
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-color: block;
-    align-items:center;
+    align-items: center;
     color: block;
     flex-basis: 20%;
     margin-top: 10px;
@@ -128,33 +131,35 @@ h1 {
     background-color: white;
 
 }
-.c1{
+
+.c1 {
     margin: 10px;
     font-weight: 900;
-    font-size:xx-large;
+    font-size: xx-large;
     text-align: center;
 }
 
-.c2{
+.c2 {
     margin: 5px;
-    font-size:x-large;
+    font-size: x-large;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.c3{
+.c3 {
     margin: 5px;
     font-weight: 900;
     font-size: x-large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.c4{
+.c4 {
     margin: 10px;
     font-size: medium;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.c31{
+
+.c31 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -171,12 +176,12 @@ h1 {
 
 
 
-.d{
+.d {
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-color: block;
-    align-items:center;
+    align-items: center;
     color: block;
     flex-basis: 20%;
     margin-top: 10px;
@@ -189,19 +194,20 @@ h1 {
     background-color: white;
 
 }
-.d1{
+
+.d1 {
     margin: 10px;
     font-weight: 900;
-    font-size:x-large;
+    font-size: x-large;
 }
 
-.d31{
+.d31 {
     margin: 10px;
     font-size: medium;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.d2{
+.d2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -215,21 +221,21 @@ h1 {
     border-style: solid;
 }
 
-.d21{
+.d21 {
     margin: 10px;
     font-weight: 900;
-    font-size:large;
+    font-size: large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
 
-.e{
+.e {
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-color: block;
-    align-items:center;
+    align-items: center;
     color: block;
     flex-basis: 20%;
     margin-top: 10px;
@@ -242,26 +248,27 @@ h1 {
     background-color: white;
 
 }
-.e1{
+
+.e1 {
     margin: 10px;
     font-weight: 900;
-    font-size:x-large;
+    font-size: x-large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.e11{
+.e11 {
     display: flex;
     flex-direction: column;
     margin: 10px;
     font-weight: 900;
-    font-size:x-large;
+    font-size: x-large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
-.e2{
+.e2 {
     margin: 5px;
-    font-size:x-large;
+    font-size: x-large;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -279,10 +286,10 @@ h1 {
 
 }
 
-.e31{
+.e31 {
     display: flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     color: black;
     flex-basis: 20%;
@@ -290,32 +297,32 @@ h1 {
     border: 3px;
 }
 
-.e311{
+.e311 {
     margin: 10px;
     font-size: large;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
-.e32{
+.e32 {
     display: flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     color: black;
     flex-basis: 20%;
     margin: 10px;
     border: 3px;
-    
+
 }
 
-.e312{
+.e312 {
     margin: 10px;
     font-size: large;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.e33{
+.e33 {
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 10px;
