--- a/Page 2/CSS/pagecss.css
+++ b/Page 2/CSS/pagecss.css
@@ -198,7 +198,7 @@ h1 {
 .d1 {
     margin: 10px;
     font-weight: 900;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 .d31 {
@@ -224,7 +224,7 @@ h1 {
 .d21 {
     margin: 10px;
     font-weight: 900;
-    font-size: large;
+    font-size: x-large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
