--- a/Page 1/CSS/pagecss.css
+++ b/Page 1/CSS/pagecss.css
@@ -7,6 +7,23 @@ body {
 
 }
 
+header{
+    background-image:url(../Photo/overlay.jpg);
+	text-align: center;
+	width: 100%;
+	height: auto;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+    border-radius: 0 0 85% 85% / 30%;
+}
+header .overlay{
+	width: 100%;
+	height: 100%;
+    padding: 10px;
+}
+
 h1 {
     justify-content: center;
     text-align: center;
